# dm_spine_bevy

./: .gitignore  Cargo.toml  PERF_EVAL.md  README.md
.github/workflows/: ci.yml
examples/: spine_browser.rs  spine_stress.rs  spineboy_screenshot.rs  spineboy_walk.rs  spineboy_walk_3d.rs
examples/common/: mod.rs
src/: components.rs  lib.rs  mesh.rs  systems.rs
src/asset/: atlas_loader.rs  mod.rs  skel_json_loader.rs  skel_loader.rs
src/material/: mod.rs  shared.rs  spine.wgsl  spine_3d.wgsl  spine_material.rs  spine_material_3d.rs
tests/: plugin_registers.rs  plugin_registers_3d.rs
